# fusiondata

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: quickstart.py
fusiondata/: __init__.py  cache.py  client.py  models.py  plotting.py  utils.py
fusiondata/sources/: __init__.py  d3d.py  iaea.py  jet.py  lhd.py  mast.py  w7x.py
