[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusiondata"
version = "0.1.1"
description = "A unified Python API for fusion reactor data — astropy for fusion."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "fusiondata contributors"},
]
keywords = ["fusion", "plasma", "tokamak", "stellarator", "W7-X", "MAST", "IAEA", "nuclear"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "requests>=2.28",
    "numpy>=1.22",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
full = [
    "xarray>=2022.10",
    "s3fs>=2022.10",
    "zarr>=2.13",
    "mdsthin>=0.1",
    "PyJWT>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "responses>=0.22",
]

[project.urls]
Homepage = "https://github.com/fusiondata/fusiondata"
Documentation = "https://fusiondata.readthedocs.io"

[tool.setuptools.packages.find]
include = ["fusiondata*"]
